--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodDeliveryApp_Student"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".HomePageVendor"
+            android:exported="false" />
+        <activity
+            android:name=".HomePageAdmin"
+            android:exported="false" />
         <activity
             android:name=".ForgetPassword"
             android:exported="false" />
@@ -41,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".splash_screen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
