--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -17,9 +18,7 @@
         <activity
             android:name=".ProductDetailActivity"
             android:exported="false" />
-        <activity
-            android:name=".CartActivity"
-            android:exported="false" />
+
         <activity
             android:name=".AddProductActivity"
             android:exported="false" />
