--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
         <activity
+            android:name=".Admin_DeliveryOrders"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_ViewStaffDetails"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_RegisterDeliveryMen"
+            android:exported="false" />
+        <activity
             android:name=".Admin_AccountDetail"
             android:exported="false" />
         <activity
