--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
+        <activity
+            android:name=".EditVendorPage"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_ViewOrders"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_viewProducts"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_editVendor"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_viewVendor"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_StudentFeedback"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_StudentOrderHistory"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_Setting"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_Payment"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_UpdateCategory"
+            android:exported="false" />
+        <activity
+            android:name=".Admin_Profilepage"
+            android:exported="false" />
         <activity
             android:name=".AddCategoryActivity"
             android:exported="false" />
