--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
         <activity
+            android:name=".DeliveryProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrderDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeliveryHomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditCategoryPage"
             android:exported="false" />
         <activity
@@ -77,9 +86,6 @@
             android:exported="false" />
         <activity
             android:name=".Admin_StudentDetails"
-            android:exported="false" />
-        <activity
-            android:name=".HomePage_deliveryMan"
             android:exported="false" />
         <activity
             android:name=".ConfirmOrderActivity"
