deliveryman registration from RegistrationPage,Delivery man registration done with validations, orderId also stored in delivery_otp table, delivery man login updated,Admin delivery man approval done,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
         <activity
+            android:name=".Admin_ActiveDelMan"
+            android:exported="false" />
+        <activity
             android:name=".Delivery_OTP"
             android:exported="false" />
         <activity
