--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -17,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
+        <activity
+            android:name=".VendorReviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudentReviewActivity"
+            android:exported="false" />
         <activity
             android:name=".ShowProductActivity"
             android:exported="false" />
