--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
         <activity
+            android:name=".CategoryShowProduct"
+            android:exported="false" />
+        <activity
             android:name=".VendorReviewActivity"
             android:exported="false" />
         <activity
@@ -24,9 +27,6 @@
             android:exported="false" />
         <activity
             android:name=".ShowProductActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ShopProductActivity"
             android:exported="false" />
         <activity
             android:name=".AdminViewUserDetails"
