shop page open working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".ShowProductActivity"
             android:exported="false" />
         <activity
+            android:name=".ShopProductActivity"
+            android:exported="false"/>
+
+        <activity
             android:name=".AdminViewUserDetails"
             android:exported="false" />
         <activity
