--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.FoodDeliveryApp_Student"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterActivityAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivityadmin"
+            android:exported="false" />
+        <activity
             android:name=".AdminApproveVendor"
             android:exported="false" />
         <activity
